[package]
name = "raw_identifiers"
version = "0.1.0"
authors = [
    "Alex Payne <apayne@esri.com>", 
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
schemars = { version = "0.8" }

# serialization and deserialization support
serde = { version = "1", features = ["derive"] } 
serde_json = "1"
serde_with = "2"

[dependencies.rocket_okapi]
path = "../../rocket-okapi"
features = ["swagger"]